--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.2",
+    "dotenv": "^16.0.3",
     "expo": "~48.0.15",
+    "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.2",
@@ -22,6 +24,7 @@
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
     "expo-web-browser": "~12.1.1",
+    "firebase": "^9.6.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
